[package]
name = "github-merge-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "github-merge-bot"
path = "src/main.rs"

[lib]
name = "github_merge_bot"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
config = "0.14"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
regex = "1.10"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
base64 = "0.22"
